--- a/package.json
+++ b/package.json
@@ -9,23 +9,39 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babelify": "^6.1.3",
-    "browserify": "^10.2.4",
-    "gulp": "^3.9.0",
-    "gulp-compass": "^2.1.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-html-replace": "^1.5.0",
-    "gulp-react": "^3.0.1",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "1.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.2"
+    "autoprefixer-loader": "^3.2.0",
+    "babel": "^6.5.2",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
+    "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^2.9.0",
+    "mocha": "^2.4.5",
+    "nock": "^8.0.0",
+    "node-fetch": "^1.5.2",
+    "node-sass": "^3.7.0",
+    "react-addons-test-utils": "^15.0.2",
+    "react-transform-hmr": "^1.0.2",
+    "redux-devtools": "^3.2.0",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.9",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.9.1"
   },
   "dependencies": {
     "cldr": "^3.0.0",
     "events": "^1.0.2",
     "flux": "^2.0.3",
-    "jest": "latest",
     "jsx-loader": "^0.13.2",
     "moment": "^2.10.3",
     "moment-holidays": "0.0.3",
