--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --progress --config ",
+    "test": "NODE_ENV=test mocha -w --recursive --compilers js:babel-core/register ./app/tests/**"
   },
   "author": "",
   "license": "ISC",
@@ -39,17 +40,15 @@
     "webpack-hot-middleware": "^2.9.1"
   },
   "dependencies": {
-    "cldr": "^3.0.0",
-    "events": "^1.0.2",
-    "flux": "^2.0.3",
-    "jsx-loader": "^0.13.2",
     "moment": "^2.10.3",
-    "moment-holidays": "0.0.3",
     "node-calendar": "^0.1.4",
-    "object-assign": "latest",
-    "react": "^0.13.3",
-    "react-router": "1.0.0-beta3",
-    "superagent": "^0.21.0",
-    "twix": "^0.6.4"
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.0",
+    "redux": "^3.3.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1"
   }
 }
