--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
   ],
   "env": {
     "development": {
+      "presets": ["react-hmre"],
       "plugins": [
         [
           "react-transform",
