--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
@@ -28,6 +29,7 @@
     "node-fetch": "^1.5.2",
     "node-sass": "^3.7.0",
     "react-addons-test-utils": "^15.0.2",
+    "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.2",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
@@ -40,7 +42,7 @@
     "webpack-hot-middleware": "^2.9.1"
   },
   "dependencies": {
-    "moment": "^2.10.3",
+    "moment": "^2.13",
     "node-calendar": "^0.1.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
