--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-hot-middleware": "^2.9.1"
   },
   "dependencies": {
+    "invariant": "^2.2.1",
     "moment": "^2.13",
     "node-calendar": "^0.1.4",
     "react": "^15.0.2",
