--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-addons-test-utils": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.2",
+    "redux-api-middleware": "^1.0.2",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.9",
@@ -56,13 +57,10 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.0",
-    "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "thenby": "^1.2.1",
-    "twix": "^1.0.0",
     "uuid": "^2.0.2"
   },
   "pre-commit": [
