--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack",
     "test": "NODE_ENV=test mocha -w --recursive --compilers js:babel-core/register ./app/tests/**",
     "lint": "eslint .",
-    "validate": "npm ls"
+    "validate": "npm ls",
+    "esw": "esw -w --color"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,11 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
+    "eslint": "^3.1.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-react": "^5.1.1",
+    "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "glob": "^7.0.5",
@@ -37,6 +43,7 @@
     "postcss": "^5.1.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
+    "precommit-hook-eslint": "^3.0.0",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.0.2",
     "react-hot-loader": "^1.3.0",
@@ -57,18 +64,19 @@
     "invariant": "^2.2.1",
     "moment": "^2.13",
     "node-calendar": "^0.1.4",
+    "ramda": "^0.21.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
+    "redux-notifications": "^2.1.1",
     "redux-thunk": "^2.0.1",
     "thenby": "^1.2.1",
     "uuid": "^2.0.2"
   },
   "pre-commit": [
     "lint",
-    "validate",
-    "test"
+    "validate"
   ]
 }
