--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --progress --config ",
     "build": "webpack",
     "test": "NODE_ENV=test mocha -w --recursive --compilers js:babel-core/register ./app/tests/**",
+    "testOnce": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register ./app/tests/**",
     "lint": "eslint .",
     "validate": "npm ls",
     "esw": "esw -w --color"
@@ -69,6 +70,7 @@
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
+    "redux-form": "^5.3.1",
     "redux-logger": "^2.6.1",
     "redux-notifications": "^2.1.1",
     "redux-thunk": "^2.0.1",
@@ -77,6 +79,7 @@
   },
   "pre-commit": [
     "lint",
-    "validate"
+    "validate",
+    "testOnce"
   ]
 }
