--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^0.8.4",
     "glob": "^7.0.5",
     "html-webpack-plugin": "^2.9.0",
+    "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
     "node-fetch": "^1.5.2",
@@ -61,6 +62,7 @@
     "webpack-hot-middleware": "^2.9.1"
   },
   "dependencies": {
+    "ajv": "^4.3.0",
     "color": "^0.11.3",
     "invariant": "^2.2.1",
     "moment": "^2.13",
