--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "node-calendar": "^0.1.4",
     "ramda": "^0.21.0",
     "react": "^15.0.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
