--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "start": "webpack-dev-server --progress --config ",
-    "build": "webpack",
+    "build": "webpack --config ./webpack.build.config.js --progress",
     "test": "NODE_ENV=test mocha -w --recursive --compilers js:babel-core/register ./app/tests/**",
     "testOnce": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register ./app/tests/**",
     "lint": "eslint .",
@@ -15,54 +15,35 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "autoprefixer-loader": "^3.2.0",
-    "babel": "^6.5.2",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.1.1",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
-    "eslint": "^3.1.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1",
-    "eslint-watch": "^2.1.14",
+    "eslint": "^3.2.2",
+    "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
-    "glob": "^7.0.5",
-    "html-webpack-plugin": "^2.9.0",
+    "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
-    "node-fetch": "^1.5.2",
-    "node-sass": "^3.7.0",
-    "postcss": "^5.1.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
-    "precommit-hook-eslint": "^3.0.0",
     "precss": "^1.4.0",
-    "react-addons-test-utils": "^15.0.2",
-    "react-hot-loader": "^1.3.0",
-    "react-transform-hmr": "^1.0.2",
     "redux-api-middleware": "^1.0.2",
-    "redux-devtools": "^3.2.0",
+    "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.9",
-    "sass-loader": "^3.2.0",
+    "redux-form": "^5.3.1",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.13.0",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.9.1"
+    "webpack-validator": "^2.2.7"
   },
   "dependencies": {
-    "ajv": "^4.3.0",
     "color": "^0.11.3",
     "invariant": "^2.2.1",
     "moment": "^2.13",
@@ -72,11 +53,11 @@
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
-    "redux-form": "^5.3.1",
     "redux-logger": "^2.6.1",
     "redux-notifications": "^2.1.1",
     "redux-thunk": "^2.0.1",
     "thenby": "^1.2.1",
+    "react-hot-loader": "^3.0.0-beta.2",
     "uuid": "^2.0.2"
   },
   "pre-commit": [
