--- a/package.json
+++ b/package.json
@@ -46,18 +46,19 @@
   "dependencies": {
     "color": "^0.11.3",
     "invariant": "^2.2.1",
+    "lodash": "^4.15.0",
     "moment": "^2.13",
     "node-calendar": "^0.1.4",
     "ramda": "^0.21.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-notifications": "^2.1.1",
     "redux-thunk": "^2.0.1",
     "thenby": "^1.2.1",
-    "react-hot-loader": "^3.0.0-beta.2",
     "uuid": "^2.0.2"
   },
   "pre-commit": [
