--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "invision-cal",
+  "name": "redux-task-calendar",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
     "start": "webpack-dev-server --progress --config ",
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress",
     "test": "NODE_ENV=test mocha -w --recursive --compilers js:babel-core/register ./app/tests/**",
     "testOnce": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register ./app/tests/**",
     "lint": "eslint .",
@@ -65,6 +65,8 @@
     "ajv": "^4.3.0",
     "color": "^0.11.3",
     "invariant": "^2.2.1",
+    "is-my-json-valid": "^2.13.1",
+    "jsen": "^0.6.1",
     "moment": "^2.13",
     "node-calendar": "^0.1.4",
     "ramda": "^0.21.0",
