--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-validator": "^2.2.7"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "cldr": "^3.5.2",
     "color": "^0.11.3",
     "invariant": "^2.2.1",
