removed unnecessary ... stuff

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "7.1.6",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
@@ -22,8 +22,6 @@
     "bfj": "6.1.1",
     "chai": "^3.5.0",
     "chalk": "2.4.1",
-    "classnames": "^2.2.5",
-    "color": "^3.1.0",
     "css-loader": "2.1.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -39,30 +37,35 @@
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "invariant": "^2.2.1",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^2.4.5",
-    "moment": "^2.18",
     "nock": "^8.0.0",
-    "node-calendar": "^0.1.4",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.14.0",
-    "react": "^16.7.0",
     "react-dev-utils": "^7.0.0",
+    "resolve": "1.8.1",
+    "style-loader": "0.23.0",
+    "url-loader": "1.1.1",
+    "webpack": "4.19.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "3.1.9"
+  },
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "color": "^3.1.0",
+    "invariant": "^2.2.1",
+    "moment": "^2.18",
+    "node-calendar": "^0.1.4",
+    "react": "^16.7.0",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
     "react-dom": "^16.7.0",
-    "resolve": "1.8.1",
-    "style-loader": "0.23.0",
     "thenby": "^1.2.1",
-    "url-loader": "1.1.1",
-    "uuid": "^2.0.2",
-    "webpack": "4.19.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.9"
+    "uuid": "^2.0.2"
   },
   "eslintConfig": {
     "extends": "react-app"
