--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "invariant": "^2.2.1",
     "moment": "^2.18",
     "node-calendar": "^0.1.4",
-    "react": "^16.7.0",
+    "react": "^16.7.0-alpha.2",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.7.0-alpha.2",
     "thenby": "^1.2.1",
     "uuid": "^2.0.2"
   },
