--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-task-calendar",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "dist/redux-task-calendar.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-react-app": "^3.0.6",
     "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.0",
@@ -55,6 +56,7 @@
     "webpack-dev-server": "3.1.9"
   },
   "dependencies": {
+    "babel-eslint": "9",
     "classnames": "^2.2.5",
     "color": "^3.1.0",
     "invariant": "^2.2.1",
