--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "webpack-dev-server": "3.1.9"
   },
   "dependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "classnames": "^2.2.5",
     "color": "^3.1.0",
     "invariant": "^2.2.1",
     "moment": "^2.18",
     "node-calendar": "^0.1.4",
+    "pnp-webpack-plugin": "^1.2.1",
     "react": "^16.7.0-alpha.2",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
