--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "clean": "rimraf recordsPath.json ./build",
     "test": "NODE_ENV=test mocha -w --recursive --compilers js:@babel/register ./app/tests/**",
     "testOnce": "NODE_ENV=test mocha --recursive --compilers js:@babel/register ./app/tests/**",
-    "lint": "eslint .",
+    "lint": "eslint ./src",
     "validate": "npm ls",
-    "esw": "esw -w --color"
+    "esw": "esw -w --color",
+    "build2": "NODE_ENV=production webpack"
   },
   "author": "",
   "license": "ISC",
@@ -67,8 +68,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "16.8.1",
-     "classnames": "^2.2.5",
+    "classnames": "^2.2.5",
     "color": "^3.1.0",
     "invariant": "^2.2.1",
     "moment": "^2.18",
@@ -77,7 +77,7 @@
     "react": "16.8.1",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
-    "react-hot-loader": "^4.8.0",
+    "react-dom": "16.8.1",
     "rimraf": "^2.6.3",
     "thenby": "^1.2.1",
     "uuid": "^2.0.2"
@@ -95,8 +95,6 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
-    ],"plugins": [
-      "react-hot-loader/babel"
     ]
   }
 }
