--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "nock": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pnp-webpack-plugin": "^1.2.1",
-    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "3.0.0",
+    "postcss-mixins": "^6.2.1",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.14.0",
@@ -69,11 +70,13 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "cldr": "^5.0.0",
     "color": "^3.1.0",
     "invariant": "^2.2.1",
     "moment": "^2.18",
     "node-calendar": "^0.1.4",
     "postcss-import": "^12.0.1",
+    "precss": "^4.0.0",
     "react": "16.8.1",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
