using moment-timezone and reduced the package size

--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "identity-obj-proxy": "3.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^2.4.5",
+    "moment-locales-webpack-plugin": "^1.0.7",
+    "moment-timezone-data-webpack-plugin": "^1.0.3",
     "nock": "^8.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pnp-webpack-plugin": "^1.2.1",
@@ -64,17 +66,16 @@
     "terser-webpack-plugin": "^1.2.3",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "3.1.9",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "cldr": "^5.0.0",
     "color": "^3.1.0",
     "invariant": "^2.2.1",
-    "moment": "^2.18",
+    "moment-timezone": "^0.5.23",
     "node-calendar": "^0.1.4",
     "postcss-import": "^12.0.1",
     "precss": "^4.0.0",
